--- a/about.html
+++ b/about.html
@@ -45,7 +45,7 @@ crossorigin="anonymous"></script>
       </div id="intro">
 
 <div class="col-md-12">
-      <div class="row justify-content-center"
+      <div class="row justify-content-center">
             <IMG SRC="rd.gif" align:"right" style= "width:65%">
           </div>
         </div>
