--- a/about.html
+++ b/about.html
@@ -32,16 +32,16 @@ crossorigin="anonymous"></script>
     </div class="container" id="introT2">
       <br>
 
-      <div id="intro">
+      <div class="container" id="paragraph1">
         <p>“Join us on an adventure of a lifetime, to a world unknown,
-        filled with creatures hiding in their rooms,
-        coming out to see the light once in a blue moon, to interact in the unknown.
-        All are invited! Whether your stories are simply just ideas or all you have is a character in mind,
-        to those who write as they breath, to intricate planners of nonsense!
-        Whether you like action, romance, or revision of old classics and new
-        (yes fan fiction writers! I am the point at you hissing behind your bright screens!
-        Its time to see the light) Come and explore it all!
-        Find a home away from home at Keele Creative writing society!"" </p>
+    <br> filled with creatures hiding in their rooms,
+    <br> coming out to see the light once in a blue moon, to interact in the unknown.
+      <br> All are invited! Whether your stories are simply just ideas or all you have is a character in mind,
+      <br> to those who write as they breath, to intricate planners of nonsense!
+      <br> Whether you like action, romance, or revision of old classics and new
+      <br> (yes fan fiction writers! I am the point at you hissing behind your bright screens!
+      <br> Its time to see the light) Come and explore it all!
+      <br> Find a home away from home at Keele Creative writing society!"" </p>
       </div id="intro">
 
 <div class="col-md-12">
@@ -50,7 +50,7 @@ crossorigin="anonymous"></script>
           </div>
         </div>
 
-    
+
 <div class="container">
 <div class="row justify-content-end">
   <div class="container" id="SM">
